# vbml

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: arg_shifts.md  usage.md
examples/: adding new validators.py  multiline.py  nested.py  recursion.py
vbml/: __init__.py  blanket.py  utils.py  validators.py
vbml/patcher/: __init__.py  exceptions.py  patcher.py  pattern.py  recursion.py
vbml/patcher/loader/: loader.py
vbml/patcher/pattern/: pattern.py
vbml/patcher/standart/: __init__.py  ahead.py  post.py  standart.py
vbml/validators/: standart.py
